# hslifegame-curses

./: LICENSE  README.md  haskell-lifegame.cabal
app/: Main.hs
src/: Lib.hs  Lifegame.hs
test/: Spec.hs
