name:                haskell-lifegame
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-lifegame#readme
license:             MIT
license-file:        LICENSE
author:              ABC10946
maintainer:          alphalex10946@gmail.com
copyright:           2017 ABC10946
category:            game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lifegame
  build-depends:       base >= 4.7 && < 5
                     , hscurses
  default-language:    Haskell2010

executable haskell-lifegame-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-lifegame
                     , hscurses
  default-language:    Haskell2010

test-suite haskell-lifegame-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-lifegame
                     , hscurses
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-lifegame
